<resources>
    <string name="app_name">salinitycalc</string>
    <string name="flavor1">塩</string>
    <string name="flavor2">しょうゆ</string>
    <string name="flavor3">コンソメ</string>
    <string name="flavor4">味噌</string>
    <string name="flavor5">ケチャップ</string>
    <string name="flavor6">ソース</string>
    <string name="formula_text">0</string>
    <string name="flavor1_salinity">0.006</string>
    <string name="flavor2_salinity">0.0375</string>
    <string name="flavor3_salinity">0.012</string>
    <string name="flavor4_salinity">0.05</string>
    <string name="flavor5_salinity">0.033</string>
    <string name="flavor6_salinity">0.15</string>
    <string name="tere1">ホットクック</string>
    <string name="tere2">鍋１</string>
    <string name="tere3">鍋２</string>
    <string name="tere1_weight">665</string>
    <string name="tere2_weight">200</string>
    <string name="tere3_weight">300</string>

    <string name="action_settings">setting</string>
    <string name="title_activity_settings">setting</string>

    <!-- Preference Titles -->
    <string name="flavoring_header1">調味料 １</string>
    <string name="flavoring_header2">調味料 ２</string>
    <string name="flavoring_header3">調味料 ３</string>
    <string name="flavoring_header4">調味料 ４</string>
    <string name="flavoring_header5">調味料 ５</string>
    <string name="flavoring_header6">調味料 ６</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
